--- a/css/main.css
+++ b/css/main.css
@@ -708,3 +708,69 @@ li {
 }
 
 /*============= 2 screen =============*/
+.second {
+	margin-top: 60px;
+	margin-bottom: 14px;
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 1440px;
+	width: 100%;
+}
+
+.main__title {
+	text-align: center;
+	font-family: 'Geogrotesque Cyr';
+	font-size: 35.56px;
+	color: #111111;
+	font-weight: 400;
+	position: relative;
+	margin: 0 auto;
+	max-width: 450px;
+}
+
+.main__title::before {
+	position: absolute;
+	top: -40px;
+	left: 215px;
+	box-sizing: border-box;
+	content: '';
+	width: 28px;
+	height: 28px;
+	border: 3px solid #8ECD30;
+	border-radius: 6px;
+	transform: rotate(45deg);
+}
+
+.second__content {
+	margin-top: 50px;
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+}
+
+.second__content__item {
+	display: flex;
+	flex-direction: column;
+	max-width: 325px;
+	width: 100%;
+	margin: 0 62px 36px 62px;
+}
+
+.second__content__img {
+	width: 70px;
+	height: 90px;
+	fill: #48B829;
+}
+
+.second__content__sub-title {
+	font-size: 30.48px;
+	font-family: 'Proxima Nova Cn Rg';
+	color: #111111;
+	font-weight: 400;
+}
+
+.second__content__text {
+	font-size: 20.32px;
+	font-family: 'Proxima Nova Cn Rg';
+	color: #7C7C7C;
+}
