--- a/css/media(1).css
+++ b/css/media(1).css
@@ -58,6 +58,25 @@
     left: 0;
     background: #C4D737;
   }
+
+  .third__main {
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .third__content__item {
+    margin: 30px 30px;
+    min-height: 430px;
+  }
+
+  .third__content {
+    flex-direction: column;
+  }
+
+  
+  .third__content__item::after {
+    display: none;
+  }
 }
 
 /* Large Devices, Wide Screens */
@@ -119,7 +138,14 @@
   .header__socials, .header__menu {
     align-self: center;
   }
-  
+}
+
+/* Small Devices, Tablets */
+@media only screen and (max-width : 786px) {
+  .third__main {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 /* Small Devices, Tablets */
@@ -132,6 +158,17 @@
 
   .first {
     padding-bottom: 440px;
+  }
+}
+
+/* Small Devices, Tablets */
+@media only screen and (max-width : 567px) {
+  .main__title__modificated::after {
+    top: -35px;
+  }
+  
+  .main__title__modificated::before{
+    top: -102px;
   }
 }
 
@@ -178,16 +215,8 @@
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 434px) {
-  .main__title {
-    width: 100%;
-  }
-
   .main__title::before {
-    top: 0;
-    right: 0;
-    bottom: 120px;
-    left: 0;
-    margin: auto;
+    top: -140px;
   }
 
   .second__content__item {
@@ -202,5 +231,28 @@
   .second__br {
     display: none;
   } 
+
+  .main__title__modificated::after {
+    top: -35px;
+  }
+  
+  .main__title__modificated::before{
+    top: -102px;
+  }
+
+  .third {
+    overflow: hidden;
+  }
+}
+
+/* Small Devices */
+@media only screen and (max-width : 320px) {
+  .main__title__modificated::after {
+    top: -35px;
+  }
+  
+  .main__title__modificated::before{
+    top: -134px;
+  }
 }
 
